Changed tab name/icon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "PB Sports",
+  "name": "Power Bottom Sports",
   "icons": [
     {
       "src": "favicon.ico",
